change land animation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,3 +29,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_SideScrollerGameMode",NewClassName="BirdBrawlerGameMode")
 +ActiveClassRedirects=(OldClassName="TP_SideScrollerCharacter",NewClassName="BirdBrawlerCharacter")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
+
