--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,6 +85,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
 +ActionMappings=(ActionName="MoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="MoveHorizontal",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveHorizontal",Scale=1.000000,Key=D)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
