--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,3 +32,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/BirdBrawler.UHitboxDataAsset",NewName="/Script/BirdBrawler.HitboxDataAsset")
