Add ffa game mode

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,13 +4,13 @@
 EditorStartupMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 LocalMapOptions=
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/BirdBrawler.BirdBrawlerGameMode
+GlobalDefaultGameMode=/Game/SideScrollerCPP/Blueprints/FreeForAllGameMode.FreeForAllGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -35,3 +35,4 @@ r.DefaultFeature.MotionBlur=False
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/BirdBrawler.UHitboxDataAsset",NewName="/Script/BirdBrawler.HitboxDataAsset")
+
