Change camera view

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,4 +35,5 @@ r.DefaultFeature.MotionBlur=False
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/BirdBrawler.UHitboxDataAsset",NewName="/Script/BirdBrawler.HitboxDataAsset")
++PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawns",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds")
 
