Fix reaction not resetting to idle

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,5 +35,6 @@ r.DefaultFeature.MotionBlur=False
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/BirdBrawler.UHitboxDataAsset",NewName="/Script/BirdBrawler.HitboxDataAsset")
-+PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawns",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds")
++PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawns",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
++PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
 
