Lock movement along the X axis

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -38,3 +38,6 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawns",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
 
+[/Script/Engine.PhysicsSettings]
+DefaultDegreesOfFreedom=YZPlane
+
