Set invincible material when character is invincible

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,6 +37,8 @@ r.DefaultFeature.MotionBlur=False
 +ClassRedirects=(OldName="/Script/BirdBrawler.UHitboxDataAsset",NewName="/Script/BirdBrawler.HitboxDataAsset")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawns",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
++PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.CharacterMaterialInstances",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.EditableMaterialInstances")
++PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseIntensity")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
