Add basic damage percent HUD

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,6 +39,7 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.HitboxNotifyState.HitPawsIds",NewName="/Script/BirdBrawler.HitboxNotifyState.HitPawnsIds")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.CharacterMaterialInstances",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.EditableMaterialInstances")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseIntensity")
++ClassRedirects=(OldName="/Script/BirdBrawler.PlayerHUDWidget",NewName="/Script/BirdBrawler.CharacterHUDWidget")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
