Understanding subsystems WIP

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
+GameInstanceClass=/Game/SideScrollerCPP/BirdBrawlerGameInstance.BirdBrawlerGameInstance_C
+GameDefaultMap=/Game/SideScrollerCPP/Maps/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/SideScrollerCPP/Blueprints/FreeForAllGameMode.FreeForAllGameMode_C
 GlobalDefaultServerGameMode=None
@@ -40,6 +40,7 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.CharacterMaterialInstances",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.EditableMaterialInstances")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseIntensity")
 +ClassRedirects=(OldName="/Script/BirdBrawler.PlayerHUDWidget",NewName="/Script/BirdBrawler.CharacterHUDWidget")
++ClassRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerGameInstance",NewName="/Script/BirdBrawler.CustomGameInstance")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
