Add countdown UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/SideScrollerCPP/BirdBrawlerGameInstance.BirdBrawlerGameInstance_C
 GameDefaultMap=/Game/SideScrollerCPP/Maps/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/SideScrollerCPP/Blueprints/FreeForAllGameMode.FreeForAllGameMode_C
+GlobalDefaultGameMode=/Game/SideScrollerCPP/Blueprints/GameModes/CombatGameModeBP.CombatGameModeBP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -41,6 +41,10 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.InvincibilityMaterialPulseIntensity")
 +ClassRedirects=(OldName="/Script/BirdBrawler.PlayerHUDWidget",NewName="/Script/BirdBrawler.CharacterHUDWidget")
 +ClassRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerGameInstance",NewName="/Script/BirdBrawler.CustomGameInstance")
++ClassRedirects=(OldName="/Script/BirdBrawler.CombatHUD",NewName="/Script/BirdBrawler.CombatHUD")
++ClassRedirects=(OldName="/Script/BirdBrawler.AHUDCountdown",NewName="/Script/BirdBrawler.HUDCountdown")
++PropertyRedirects=(OldName="/Script/BirdBrawler.CombatHUD.Countdown",NewName="/Script/BirdBrawler.CombatHUD.CountdownWidget")
++ClassRedirects=(OldName="/Script/BirdBrawler.HUDWidgetBase",NewName="/Script/BirdBrawler.WidgetBase")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
