Add match countdown

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerCPP/Maps/SideScrollerExampleMap
+EditorStartupMap=/Game/SideScrollerCPP/Maps/Sandbox.Sandbox
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=False
@@ -45,6 +45,8 @@ r.DefaultFeature.MotionBlur=False
 +ClassRedirects=(OldName="/Script/BirdBrawler.AHUDCountdown",NewName="/Script/BirdBrawler.HUDCountdown")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.CombatHUD.Countdown",NewName="/Script/BirdBrawler.CombatHUD.CountdownWidget")
 +ClassRedirects=(OldName="/Script/BirdBrawler.HUDWidgetBase",NewName="/Script/BirdBrawler.WidgetBase")
++PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.CountdownDuration",NewName="/Script/BirdBrawler.CombatGameMode.CountdownDurationSeconds")
++PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.RoundDurationSeconds",NewName="/Script/BirdBrawler.CombatGameMode.MatchDurationSeconds")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
