--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A1B6222A4ACDA64125F4B4910D0DCB54
 ProjectName=Side Scroller Game Template
+CompanyName=Giammarco Agazzotti
+CopyrightNotice=Copyright (c) Giammarco Agazzotti
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
