Handle shake/hitstun from outside the character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,6 +47,8 @@ r.DefaultFeature.MotionBlur=False
 +ClassRedirects=(OldName="/Script/BirdBrawler.HUDWidgetBase",NewName="/Script/BirdBrawler.WidgetBase")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.CountdownDuration",NewName="/Script/BirdBrawler.CombatGameMode.CountdownDurationSeconds")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.RoundDurationSeconds",NewName="/Script/BirdBrawler.CombatGameMode.MatchDurationSeconds")
++PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeAmplitude")
++PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshFrequency",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeFrequency")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
