--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,6 +49,7 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.RoundDurationSeconds",NewName="/Script/BirdBrawler.CombatGameMode.MatchDurationSeconds")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeAmplitude")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshFrequency",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeFrequency")
++PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.WallCollisionBox",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.WallBox")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
@@ -91,9 +92,13 @@ DefaultDegreesOfFreedom=YZPlane
 +Profiles=(Name="Vehicle",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="Vehicle",CustomResponses=,HelpMessage="Vehicle object that blocks Vehicle, WorldStatic, and WorldDynamic. All other channels will be set to default.")
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility"),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="Pushbox",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Pushbox",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Hurtbox",Response=ECR_Ignore),(Channel="Hitbox",Response=ECR_Ignore)),HelpMessage="")
++Profiles=(Name="Wall",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Wall",CustomResponses=((Channel="Wall",Response=ECR_Overlap)),HelpMessage="")
++Profiles=(Name="Wallbox",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Wallbox",CustomResponses=((Channel="WorldStatic",Response=ECR_Ignore),(Channel="WorldDynamic",Response=ECR_Ignore),(Channel="Pawn",Response=ECR_Ignore),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Ignore),(Channel="Vehicle",Response=ECR_Ignore),(Channel="Destructible",Response=ECR_Ignore),(Channel="Hurtbox",Response=ECR_Ignore),(Channel="Hitbox",Response=ECR_Ignore),(Channel="Pushbox",Response=ECR_Ignore),(Channel="Wall",Response=ECR_Overlap),(Channel="Wallbox",Response=ECR_Ignore)),HelpMessage="")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Hurtbox")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Hitbox")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Pushbox")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Wall")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False,Name="Wallbox")
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
