Programmatically add players to the game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,6 +50,7 @@ r.DefaultFeature.MotionBlur=False
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshAmplitude",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeAmplitude")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.ShakeMeshFrequency",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.MeshShakeFrequency")
 +PropertyRedirects=(OldName="/Script/BirdBrawler.BirdBrawlerCharacter.WallCollisionBox",NewName="/Script/BirdBrawler.BirdBrawlerCharacter.WallBox")
++PropertyRedirects=(OldName="/Script/BirdBrawler.CombatGameMode.PlayerStartLocations",NewName="/Script/BirdBrawler.CombatGameMode.PlayerStarts")
 
 [/Script/Engine.PhysicsSettings]
 DefaultDegreesOfFreedom=YZPlane
